[gd_scene load_steps=5 format=3 uid="uid://bca11qet1it2i"]

[ext_resource type="Script" path="res://main_map.gd" id="1_arjcw"]
[ext_resource type="Texture2D" uid="uid://dmd3pq1h23yrt" path="res://map biomes.png" id="1_robre"]
[ext_resource type="Script" path="res://camera_2d.gd" id="2_cxjh6"]
[ext_resource type="PackedScene" uid="uid://bij712nq680ap" path="res://Zone.tscn" id="3_cjc14"]

[node name="Main_map" type="Node2D"]
script = ExtResource("1_arjcw")

[node name="MapBiomes" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
texture = ExtResource("1_robre")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -500
limit_top = -300
limit_right = 500
limit_bottom = 300
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("2_cxjh6")

[node name="Zones" type="Node" parent="."]

[node name="Zone" parent="Zones" instance=ExtResource("3_cjc14")]
position = Vector2(-19, -5)

[node name="Zone2" parent="Zones" instance=ExtResource("3_cjc14")]
position = Vector2(1, -86)

[node name="Zone3" parent="Zones" instance=ExtResource("3_cjc14")]
position = Vector2(-52, -98)

[node name="Zone4" parent="Zones" instance=ExtResource("3_cjc14")]
position = Vector2(-201, -62)
